--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,10 @@
   --accent-white-color: #ffffff;
 }
 body {
-  color: #000000;
   background-color: var(--primary-bg-color);
   font-family: Roboto, sans-serif;
   font-size: 14px;
-  font-weight: 400;
   letter-spacing: 0.03em;
-}
-button {
 }
 
 .list {
@@ -33,7 +29,7 @@ button {
 .logo-web {
   color: var(--accent-color);
 }
-.header {
+header {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -54,8 +50,10 @@ button {
   color: var(--accent-color);
   background-color: var(--accent-white-color);
 }
-
-.auth a {
+.auth-list {
+  list-style: none;
+}
+.auth-list a {
   text-decoration: none;
   color: var(--title-text-color);
 }
@@ -93,6 +91,7 @@ button {
 .hero .button:hover, /*є тінь під кнопкою*/
 .hero .button:focus {
   background-color: #188ce8;
+  cursor: pointer;
 }
 /*features*/
 
@@ -110,6 +109,14 @@ button {
 }
 
 /*we-do*/
+.we-do h2,
+.team h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+  color: var(--primary-text-color);
+}
 .we-do img {
   width: 370px;
 }
@@ -117,6 +124,7 @@ button {
 .team {
   background-color: #f5f4fa;
 }
+
 .team img {
   width: 270px;
 }
@@ -132,11 +140,12 @@ button {
 
 /* for second page*/
 
-.button {
+.filters .button {
   list-style: none;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
+  letter-spacing: 0.03em;
   /* identical to box height, or 162% */
 }
 .filters button {
